[package]
name = "libp2p-chat"
version = "0.1.0"
edition = "2021"
description = """
An example/testbed of using libp2p with different protocols (e.g gossipsip, relay/dcute, etc)
"""
rust-version = "1.60"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/libp2p-chat"
authors = ["Darius Clark"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-helper = { default-features = false, version = "0.4", features = [
    "gossipsub",
] }
libp2p = { version = "0.50", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
futures-timer = "3.0"
anyhow = { version = "1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rustyline-async = "0.2"
crypto-seal = "0.2"
clap = { version = "3.2", features = ["derive"] }
bs58 = "0.4"
sha2 = "0.10"

[patch.crates-io]
libp2p = { git = "https://github.com/kpp/rust-libp2p", branch = "libp2p-quic" }
libp2p-helper = { git = "https://github.com/dariusc93/libp2p-helper", branch = "feat/test" }
